# Prog.Concorrente

./: CMakeLists.txt
src/: atendimento.c  atendimento.h  gestao-estoque.c  gestao-estoque.h  gestao-pedidos.c  gestao-pedidos.h  main.c  pedidos-delivery.c  pedidos-delivery.h  reserva-mesa.c  reserva-mesa.h
